codepkg/objects/Variable_Data_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>File_Column_G_Destination_Indicator__c</fullName>
        <label>File Column G Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_G__c</fullName>
        <label>File Column G</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_H__c</fullName>
        <label>File Column H</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_I_Destination_Indicator__c</fullName>
        <label>File Column I Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_I__c</fullName>
        <label>File Column I</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_J_Destination_Indicator__c</fullName>
        <label>File Column J Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_J__c</fullName>
        <label>File Column J</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_K_Destination_Indicator__c</fullName>
        <label>File Column K Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_K__c</fullName>
        <label>File Column K</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_L_Destination_Indicator__c</fullName>
        <label>File Column L Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_L__c</fullName>
        <label>File Column L</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_M_Destination_Indicator__c</fullName>
        <label>File Column M Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_M__c</fullName>
        <label>File Column M</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_N_Destination_Indicator__c</fullName>
        <label>File Column N Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_N__c</fullName>
        <label>File Column N</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_O_Destination_Indicator__c</fullName>
        <label>File Column O Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_O__c</fullName>
        <label>File Column O</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_P_Destination_Indicator__c</fullName>
        <label>File Column P Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_P__c</fullName>
        <label>File Column P</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_Q_Destination_Indicator__c</fullName>
        <label>File Column Q Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_Q__c</fullName>
        <label>File Column Q</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_R_Destination_Indicator__c</fullName>
        <label>File Column R Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_R__c</fullName>
        <label>File Column R</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_S_Destination_Indicator__c</fullName>
        <label>File Column S Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_S__c</fullName>
        <label>File Column S</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_T_Destination_Indicator__c</fullName>
        <label>File Column T Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_T__c</fullName>
        <label>File Column T</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_U_Destination_Indicator__c</fullName>
        <label>File Column U Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_U__c</fullName>
        <label>File Column U</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_V_Destination_Indicator__c</fullName>
        <label>File Column V Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_V__c</fullName>
        <label>File Column V</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_W_Destination_Indicator__c</fullName>
        <label>File Column W Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_W__c</fullName>
        <label>File Column W</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_X_Destination_Indicator__c</fullName>
        <label>File Column X Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_X__c</fullName>
        <label>File Column X</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_Y_Destination_Indicator__c</fullName>
        <label>File Column Y Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_Y__c</fullName>
        <label>File Column Y</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_Z_Destination_Indicator__c</fullName>
        <label>File Column Z Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_Z__c</fullName>
        <label>File Column Z</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_column_H_Destination_Indicator__c</fullName>
        <label>File column H Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandatory_Field__c</fullName>
        <label>Mandatory Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Columns__c</fullName>
        <label>No of Columns</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Field_AA__c</fullName>
        <label>PO Field AA</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AB__c</fullName>
        <label>PO Field AB</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AC__c</fullName>
        <label>PO Field AC</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AD__c</fullName>
        <label>PO Field AD</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AE__c</fullName>
        <label>PO Field AE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AF__c</fullName>
        <label>PO Field AF</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AG__c</fullName>
        <label>PO Field AG</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AH__c</fullName>
        <label>PO Field AH</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AI__c</fullName>
        <label>PO Field AI</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AJ__c</fullName>
        <label>PO Field AJ</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AK__c</fullName>
        <label>PO Field AK</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AL__c</fullName>
        <label>PO Field AL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AM__c</fullName>
        <label>PO Field AM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AN__c</fullName>
        <label>PO Field AN</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AO__c</fullName>
        <label>PO Field AO</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AP__c</fullName>
        <label>PO Field AP</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AQ__c</fullName>
        <label>PO Field AQ</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AR__c</fullName>
        <label>PO Field AR</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AS__c</fullName>
        <label>PO Field AS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AT__c</fullName>
        <label>PO Field AT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AU__c</fullName>
        <label>PO Field AU</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AV__c</fullName>
        <label>PO Field AV</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AW__c</fullName>
        <label>PO Field AW</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AX__c</fullName>
        <label>PO Field AX</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AY__c</fullName>
        <label>PO Field AY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_AZ__c</fullName>
        <label>PO Field AZ</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_A__c</fullName>
        <label>PO Field A</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_B__c</fullName>
        <label>PO Field B</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_C__c</fullName>
        <label>PO Field C</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_D__c</fullName>
        <label>PO Field D</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_E__c</fullName>
        <label>PO Field E</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_F__c</fullName>
        <label>PO Field F</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_G__c</fullName>
        <label>PO Field G</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_H__c</fullName>
        <label>PO Field H</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_I__c</fullName>
        <label>PO Field I</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_J__c</fullName>
        <label>PO Field J</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_K__c</fullName>
        <label>PO Field K</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_L__c</fullName>
        <label>PO Field L</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_M__c</fullName>
        <label>PO Field M</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_N__c</fullName>
        <label>PO Field N</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_O__c</fullName>
        <label>PO Field O</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_P__c</fullName>
        <label>PO Field P</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_Q__c</fullName>
        <label>PO Field Q</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_R__c</fullName>
        <label>PO Field R</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_S__c</fullName>
        <label>PO Field S</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_T__c</fullName>
        <label>PO Field T</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_U__c</fullName>
        <label>PO Field U</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_V__c</fullName>
        <label>PO Field V</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_W__c</fullName>
        <label>PO Field W</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_X__c</fullName>
        <label>PO Field X</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_Y__c</fullName>
        <label>PO Field Y</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Field_Z__c</fullName>
        <label>PO Field Z</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Vertical__c</fullName>
        <label>Product Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Flexible Packaging</fullName>
                </value>
                <value>
                    <fullName>Hanger Business</fullName>
                    <label>Hangers &amp; Accessories</label>
                </value>
                <value>
                    <fullName>INTELLIGENT SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>Labels &amp; Tickets</fullName>
                </value>
                <value>
                    <fullName>New Vertical</fullName>
                </value>
                <value>
                    <fullName>TLA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_field_AA__c</fullName>
        <label>Required field AA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AB__c</fullName>
        <label>Required field AB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AC__c</fullName>
        <label>Required field AC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AD__c</fullName>
        <label>Required field AD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AE__c</fullName>
        <label>Required field AE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AF__c</fullName>
        <label>Required field AF</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AG__c</fullName>
        <label>Required field AG</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AH__c</fullName>
        <label>Required field AH</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AI__c</fullName>
        <label>Required field AI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AJ__c</fullName>
        <label>Required field AJ</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AK__c</fullName>
        <label>Required field AK</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AL__c</fullName>
        <label>Required field AL</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AM__c</fullName>
        <label>Required field AM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AN__c</fullName>
        <label>Required field AN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AO__c</fullName>
        <label>Required field AO</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AP__c</fullName>
        <label>Required field AP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AQ__c</fullName>
        <label>Required field AQ</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AR__c</fullName>
        <label>Required field AR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AS__c</fullName>
        <label>Required field AS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AT__c</fullName>
        <label>Required field AT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AU__c</fullName>
        <label>Required field AU</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AV__c</fullName>
        <label>Required field AV</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AW__c</fullName>
        <label>Required field AW</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AX__c</fullName>
        <label>Required field AX</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AY__c</fullName>
        <label>Required field AY</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_AZ__c</fullName>
        <label>Required field AZ</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_A__c</fullName>
        <label>Required field A</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_B__c</fullName>
        <label>Required field B</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_C__c</fullName>
        <label>Required field C</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_D__c</fullName>
        <label>Required field D</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_E__c</fullName>
        <label>Required field E</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_F__c</fullName>
        <label>Required field F</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_G__c</fullName>
        <label>Required field G</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_H__c</fullName>
        <label>Required field H</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_I__c</fullName>
        <label>Required field I</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_J__c</fullName>
        <label>Required field J</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_K__c</fullName>
        <label>Required field K</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_L__c</fullName>
        <label>Required field L</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_M__c</fullName>
        <label>Required field M</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_N__c</fullName>
        <label>Required field N</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_O__c</fullName>
        <label>Required field O</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_P__c</fullName>
        <label>Required field P</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_Q__c</fullName>
        <label>Required field Q</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_R__c</fullName>
        <label>Required field R</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_S__c</fullName>
        <label>Required field S</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_T__c</fullName>
        <label>Required field T</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_U__c</fullName>
        <label>Required field U</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_V__c</fullName>
        <label>Required field V</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_W__c</fullName>
        <label>Required field W</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_X__c</fullName>
        <label>Required field X</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_Y__c</fullName>
        <label>Required field Y</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_field_Z__c</fullName>
        <label>Required field Z</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Variable Data Mappings</relationshipLabel>
        <relationshipName>Variable_Data_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer_Codes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up to the retailer code</description>
        <label>Retailer Code</label>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>Variable Data Mappings</relationshipLabel>
        <relationshipName>Variable_Data_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>